Fix overflow of `inner-details` for last row members

--- a/css/members.css
+++ b/css/members.css
@@ -25,7 +25,7 @@ section {
     text-align: center;
     max-width: 1100px;
     min-width: 200px;
-    margin: auto;
+    margin: 10px auto;
 }
 
 /* Div for each individual member */
